nav-bar overlapping solved

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,16 +1,16 @@
 
 @media screen and (min-width:320px) and (max-width:767px) {
     body {
-        margin-top:100px;
+        margin-top:100px !important
     }
 }
 @media screen and (min-width:768px) and (max-width:991px) {
     body {
-        margin-top:100px;
+        margin-top:100px !important
     }
 }
 @media screen and (min-width:992px) {
     body {
-        margin-top:50px;
+        margin-top:100px !important
     }
 }
